# rincewind

./: DOCUMENTATION.md  README.md  TODO_unit_tests.md  cleanup.sh  pyproject.toml  setup.py
analytic_functions/: bezier_functions.py  spline_functions.py
examples/: pyramid_export_demo.py  pyramid_output.json  timber_frame.py  zome.py
geo_functions/: __init__.py
geometry/: Extrusion.py  Line.py  Named3DSection.py  Overlapping_polyline.py  ParametricCurve3D.py  Plane.py  Point.py  Polyline2D.py  Polyline3D.py  Quaternion.py  Segment.py  Skeleton1D.py  TreeNode.py  Triangle.py  TriangulatedExtrusion.py  Triangulation.py  UVSurface.py  Vector.py
io_functions/: __init__.py
rincewind/: __init__.py
rincewind/document/: exporter.py  gdl_parser.py  vtk_exporter.py
rincewind/geo_functions/: __init__.py
rincewind/geometry/: CarpentryBars.py  Extrusion.py  Frame.py  Line.py  Named3DSection.py  ParametricCurve3D.py  Plane.py  Point.py  Polyline3D.py  Quaternion.py  Segment.py  Skeleton1D.py  Sphere.py  Spline3D.py  TreeNode.py  Triangle.py  Triangulation.py  Vector.py
rincewind/modelers/: rhomboids.py  solids.py
rincewind/modelers/house/: House.py
rincewind/modelers/planet/: Planet.py
rincewind/modelers/profiles/: splineProfileMultiParam.py
rincewind/modelers/ship_hulls/: wigley_hull.py
test/: ptcloud.txt  romarine_cad.json  save_runAll.py  segments.txt  spheres.py  test_delaunay_polyline3d.py  test_export_reference_pyramid.py  test_exporter.py  test_extrusion.py  test_extrusion2.py  test_fishprobe.py  test_fishprobe_parametric.py  test_house.py  test_house2.py  test_read_json.py  test_reflection.py  test_sew_polylines.py  test_treenode.py  test_triangle.py  test_triangulation.py  test_wing.py
